# gnn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: data.yaml
data/cora/: README  README.md
gnn/: train.py
gnn/data/: data_loader.py  data_splitter.py
gnn/inference/: gcn.py
gnn/layer/: aggregation.py  attention.py  convolution.py
gnn/libs/: config.py  logger.py  parse_args.py  plot.py  utils.py
gnn/model/: fastgcn.py  gat.py  gcn.py  graphsage.py
gnn/preprocess/: preprocessor.py
tests/: conftest.py  test_train.py
