[project]
name = "gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "bohyun-shin", email = "shinbo0613@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "scikit-learn==1.6.0",
    "torch==2.5.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "easydict>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
    "pre-commit>=4.0,<5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
    "pre-commit>=4.0,<5.0",
]
